update CentOS-6.5-x86_64-netboot definition

--- a/definitions/CentOS-6.5-x86_64-netboot/ks.cfg
+++ b/definitions/CentOS-6.5-x86_64-netboot/ks.cfg
@@ -1,5 +1,5 @@
 install
-url --url=http://www.mirrorservice.org/sites/mirror.centos.org/6.5/os/x86_64/
+url --url=http://mirror.symnds.com/distributions/CentOS-vault/6.5/os/x86_64/
 lang en_US.UTF-8
 keyboard us
 network --bootproto=dhcp
@@ -29,6 +29,7 @@ openssh-server
 
 %post
 /usr/bin/yum -y install sudo
+/usr/bin/yum -y update kernel
 /usr/sbin/groupadd veewee
 /usr/sbin/useradd veewee -g veewee -G wheel
 echo "veewee"|passwd --stdin veewee
