--- a/definitions/CentOS-6.6-x86_64-netinstall/ks.cfg
+++ b/definitions/CentOS-6.6-x86_64-netinstall/ks.cfg
@@ -28,6 +28,7 @@ openssh-server
 %end
 
 %post
+/bin/sed -i -e 's/\(^SELINUX=\).*$/\1disabled/' /etc/selinux/config
 /usr/bin/yum -y install sudo
 /usr/bin/yum -y update kernel
 /usr/sbin/groupadd veewee
